--- a/0530pymongotaskapp.ipynb
+++ b/0530pymongotaskapp.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,7 @@
    "source": [
     "client = MongoClient()\n",
     "db = client['UserDB'] # データベースを取得\n",
-    "col = db.User # Userコレクションを取得"
+    "col = db['User'] # Userコレクションを取得"
    ]
   },
   {
@@ -85,11 +85,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x7f9c481f5690>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# ユーザ登録\n",
     "col.insert_one({'TwitterId': 'kazukousen', 'TaskNum': 0, 'Tasks': []})"
@@ -97,11 +108,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'TaskNum': 0,\n",
+       " u'Tasks': [],\n",
+       " u'TwitterId': u'kazukousen',\n",
+       " u'_id': ObjectId('574d4cc0e138234d6c6452ee')}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# ユーザ取得\n",
     "col.find_one({'TwitterId': 'kazukousen'})"
@@ -109,11 +134,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kzkntt/.pyenv/versions/2.7.11/lib/python2.7/site-packages/ipykernel/__main__.py:6: DeprecationWarning: save is deprecated. Use insert_one or replace_one instead\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ObjectId('574d4cc0e138234d6c6452ee')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# タスク登録\n",
     "task_add = col.find_one({'TwitterId': 'kazukousen'})\n",
@@ -132,11 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kazukousen\n"
+     ]
+    }
+   ],
    "source": [
     "# ユーザ一覧\n",
     "for user in col.find():\n",
@@ -145,11 +196,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 DeepLearning False\n"
+     ]
+    }
+   ],
    "source": [
     "# あるユーザのタスク一覧\n",
     "for task in col.find_one({'TwitterId': 'kazukousen'})['Tasks']:\n",
@@ -165,11 +224,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kzkntt/.pyenv/versions/2.7.11/lib/python2.7/site-packages/ipykernel/__main__.py:12: DeprecationWarning: save is deprecated. Use insert_one or replace_one instead\n"
+     ]
+    }
+   ],
    "source": [
     "# 達成処理(TaskDone:をTrueに変更, DoneComment, DoneDateを追加)\n",
     "task_id = 0\n",
@@ -187,13 +254,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), u'UserDB'), u'User')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "user"
+    "id =user['_id']\n",
+    "col.insert_one({'oid': id})\n",
+    "col.save"
    ]
   },
   {
@@ -254,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
