Crawling Asuka Blog

--- a/0531CrawlerModule.ipynb
+++ b/0531CrawlerModule.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -38,58 +38,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "r = requests.get('http://52.25.113.156')"
+    "headers = {'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_5) AppleWebKit/537.36 (KHTML, like Gecko)     Chrome/48.0.2564.109 Safari/537.36 Vivaldi/1.0.403.24'}\n",
+    "r= requests.get('http://blog.nogizaka46.com/asuka.saito/?d=20160505', headers=headers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "r.status_code == 200"
+    "r.status_code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<!DOCTYPE html>\n",
-      "<html>\n",
-      "<head>\n",
-      "  <title>Comicomu</t\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "contents = r.text\n",
-    "print contents[0:50]"
+    "print contents[100:200]"
    ]
   },
   {
@@ -115,9 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -126,66 +105,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/\n",
-      "/tops/about\n",
-      "/users/sign_up\n",
-      "/users/sign_in\n",
-      "/users/auth/twitter\n",
-      "/posts/5\n",
-      "/posts/5\n",
-      "/posts/4\n",
-      "/posts/4\n",
-      "/posts/3\n",
-      "/posts/3\n",
-      "/posts/1\n",
-      "/posts/1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for link in soup.find_all('a'):\n",
+    "tag = soup.find(id='sheet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print tag.a.contents[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tag2 = soup.find(id='daytable')\n",
+    "tag2.find_all('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for link in tag2.find_all('a'):\n",
     "    print link.get('href')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{u'http://52.25.113.156',\n",
-       " u'http://52.25.113.156/',\n",
-       " u'http://52.25.113.156/posts/1',\n",
-       " u'http://52.25.113.156/posts/3',\n",
-       " u'http://52.25.113.156/posts/4',\n",
-       " u'http://52.25.113.156/posts/5',\n",
-       " u'http://52.25.113.156/tops/about',\n",
-       " u'http://52.25.113.156/users/auth/twitter',\n",
-       " u'http://52.25.113.156/users/sign_in',\n",
-       " u'http://52.25.113.156/users/sign_up'}"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "tag3 = soup.find(id='calendarPN')\n",
+    "prev = tag3.a.get('href')\n",
+    "prev[-4:] == '1111' # 一番初期かどうか\n",
+    "print tag3.a.get('href')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# あすかの\n",
+    "\n",
+    "## Database\n",
+    "\n",
+    "DBname : Asuka\n",
+    "\n",
+    "- Links\n",
+    "  - month : YYmm\n",
+    "  - url : []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from pymongo import MongoClient\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "client = MongoClient()\n",
+    "db = client['Asuka']\n",
+    "col = db.Links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "headers ={'User-Agent': 'sample Vivaldi'}\n",
+    "r= requests.get('http://blog.nogizaka46.com/asuka.saito/?d=201112', headers=headers)\n",
+    "r.status_code\n",
+    "text = r.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "links = ['http://blog.nogizaka46.com/asuka.saito/?d=201605']\n",
+    "crawled = []\n",
+    "# カレンダー判定\n",
+    "def add_link(text):\n",
+    "    soup = BeautifulSoup(text, 'html.parser')\n",
+    "    tag = soup.find(id='calendarPN')\n",
+    "    prev = tag.a.get('href')\n",
+    "    if prev[-4:] == '1111':\n",
+    "        col.insert_one({'month': prev[-4:], 'day_url': []})\n",
+    "        add_day_link(text, prev[-4:])\n",
+    "        crawled.append(prev)\n",
+    "        return \n",
+    "    else:\n",
+    "        links.append(prev)\n",
+    "\n",
+    "def add_day_link(text, month):\n",
+    "    day_add = col.find_one({'month': month})\n",
+    "    soup = BeautifulSoup(text, 'html.parser')\n",
+    "    tag = soup.find(id='daytable')\n",
+    "    for day_link in tag.find_all('a'):\n",
+    "        day_add['day_url'].append(day_link.get('href'))\n",
+    "        col.save(day_add)\n",
+    "\n",
+    "while links:\n",
+    "    url = links.pop()\n",
+    "    month = url[-4:]\n",
+    "    crawled.append(url)\n",
+    "    col.insert_one({'month': month, 'day_url': []})\n",
+    "    r = requests.get(url, headers=headers)\n",
+    "    text = r.text\n",
+    "    add_day_link(text, month)\n",
+    "    add_link(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "month_1111 = col.find_one({'month': '1112'})\n",
+    "for day_url in month_1111['day_url']:\n",
+    "    print day_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def union(p, q):\n",
+    "    for e in q:\n",
+    "        if e not in p:\n",
+    "            p.append(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "all_link= []\n",
+    "for a in col.find({'month': re.compile(r'.*')}):\n",
+    "    union(all_link, a['day_url'])\n",
+    "    \n",
+    "all_link"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "seed = u'http://52.25.113.156'\n",
-    "to_crawl = {seed}\n",
+    "to_crawl = [seed]\n",
     "links = soup.find_all('a')\n",
     "for link in links:\n",
     "    url = requests.compat.urljoin(seed, link.get('href'))\n",
@@ -199,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -229,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -240,129 +375,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 \n",
-      "1 html\n",
-      "2 Comicomu\n",
-      "3 ComiComu\n",
-      "4 About\n",
-      "5 Sign\n",
-      "6 up\n",
-      "7 Log\n",
-      "8 in\n",
-      "9 Log\n",
-      "10 in\n",
-      "11 with\n",
-      "12 Twitter\n",
-      "13 ComiComu\n",
-      "14 みんな\n",
-      "15 で\n",
-      "16 勉強\n",
-      "17 会\n",
-      "18 を\n",
-      "19 開こ\n",
-      "20 う\n",
-      "21 OSI\n",
-      "22 参照\n",
-      "23 モデル\n",
-      "24 勉強\n",
-      "25 会\n",
-      "26 ネットワーク\n",
-      "27 (\n",
-      "28 その\n",
-      "29 プロトコル\n",
-      "30 通信\n",
-      "31 )\n",
-      "32 の\n",
-      "33 理解\n",
-      "34 の\n",
-      "35 ため\n",
-      "36 に\n",
-      "37 \r\n",
-      "38 O\n",
-      "39 ...\n",
-      "40 詳細\n",
-      "41 1\n",
-      "42 人\n",
-      "43 が\n",
-      "44 参加\n",
-      "45 tag\n",
-      "46 :\n",
-      "47 div\n",
-      "48 の\n",
-      "49 閉じ\n",
-      "50 就活\n",
-      "51 必勝\n",
-      "52 法\n",
-      "53 面接\n",
-      "54 で\n",
-      "55 聞か\n",
-      "56 れる\n",
-      "57 事\n",
-      "58 とか\n",
-      "59 シェア\n",
-      "60 しよ\n",
-      "61 う\n",
-      "62 詳細\n",
-      "63 1\n",
-      "64 人\n",
-      "65 が\n",
-      "66 参加\n",
-      "67 tag\n",
-      "68 :\n",
-      "69 div\n",
-      "70 の\n",
-      "71 閉じ\n",
-      "72 asdfa\n",
-      "73 asdf\n",
-      "74 詳細\n",
-      "75 3\n",
-      "76 人\n",
-      "77 が\n",
-      "78 参加\n",
-      "79 tag\n",
-      "80 :\n",
-      "81 div\n",
-      "82 の\n",
-      "83 閉じ\n",
-      "84 JSON\n",
-      "85 Schema\n",
-      "86 を\n",
-      "87 書く\n",
-      "88 JSON\n",
-      "89 を\n",
-      "90 返す\n",
-      "91 RESTful\n",
-      "92 な\n",
-      "93 WEB\n",
-      "94 API\n",
-      "95 の\n",
-      "96 \r\n",
-      "97 仕\n",
-      "98 ...\n",
-      "99 詳細\n",
-      "100 1\n",
-      "101 人\n",
-      "102 が\n",
-      "103 参加\n",
-      "104 tag\n",
-      "105 :\n",
-      "106 div\n",
-      "107 の\n",
-      "108 閉じ\n",
-      "109 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def split_to_word(text):\n",
     "    words = []\n",
@@ -412,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -427,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -438,7 +456,7 @@
     "    def __init__(self, dbname):\n",
     "        client = MongoClient()\n",
     "        db = client[dbname]\n",
-    "        self.db = db\n",
+    "        self.col = db.Index\n",
     "\n",
     "    def __del__(self):\n",
     "        pass\n",
@@ -449,28 +467,31 @@
     "    # エントリIDを取得したり、それが存在しない場合には追加\n",
     "    # するための補助関数\n",
     "    def get_entry_id(self, collection, key, value, createnew=True):\n",
-    "        if object = self.db[collection].find({key: value}):\n",
-    "            return object\n",
-    "            object = self.db[collection].insert_one({key: value})\n",
-    "        return \n",
+    "        return None\n",
     "    \n",
     "    # 個々のページをインデックスする\n",
-    "    def add_to_index(self, url, soup):\n",
-    "        if seld.is_indexed(url): return\n",
+    "    def add_page_to_index(self, url, soup):\n",
+    "        if self.is_indexed(url): return\n",
     "        print 'Indexing %s' % url\n",
-    "        \n",
+    "\n",
     "        # 個々の単語を取得する\n",
     "        text = self.get_text_only(soup)\n",
     "        words = self.separate_words(text)\n",
-    "        \n",
-    "        # URL idを取得する\n",
-    "        url_id = self.get_entry_id('url_list', 'url', url)\n",
-    "        \n",
-    "        # それぞれの単語と、このurlのリング\n",
-    "        for i, word in enumerate(words):\n",
-    "            word_id = self.get_entry_id('word_list', 'word', word)\n",
-    "            self.db['word_location'].insert_one({'url_id': url_id})\n",
-    "    \n",
+    "\n",
+    "        for word in words:\n",
+    "            self.add_to_index(word, url)\n",
+    "\n",
+    "    def add_to_index(self, keyword, url):\n",
+    "        entry = self.col.find_one({'keyword': keyword})\n",
+    "        if entry:\n",
+    "            if url not in entry['url']:\n",
+    "                entry['url'].append(url)\n",
+    "                self.col.save(entry)\n",
+    "                return\n",
+    "        # 単語が見つからないから新規作成\n",
+    "        self.col.insert_one({'keyword': keyword, 'url': [url]})\n",
+    "        self.col.create_index('keyword')\n",
+    "\n",
     "    # HTMLのページからタグのない状態でテキストを摘出する\n",
     "    def get_text_only(self, soup):\n",
     "        values = soup.string\n",
@@ -494,7 +515,7 @@
     "            words.append(node.surface)\n",
     "            node = node.next\n",
     "        return words\n",
-    "    \n",
+    "\n",
     "    # URLが既にインデックスされていたらtrueを返す\n",
     "    def is_indexed(self, url):\n",
     "        return False\n",
@@ -503,10 +524,15 @@
     "    def add_link_ref(self, url_from, url_to, link_text):\n",
     "        pass\n",
     "    \n",
+    "    def union(self, p, q):\n",
+    "        for e in q:\n",
+    "            if e not in p:\n",
+    "                p.append(e)\n",
+    "    \n",
     "    # ページを受け取り、与えられた深さで幅優先の検索を行い\n",
     "    # ページをインデクシングする\n",
     "    def crawl(self, seed, max_depth=2):\n",
-    "        pages = {seed}\n",
+    "        pages = [seed]\n",
     "        crawled = []\n",
     "        next_depth = []\n",
     "        depth = 0\n",
@@ -521,8 +547,8 @@
     "                    continue\n",
     "                html_doc = res.text\n",
     "                soup = BeautifulSoup(html_doc, 'html.parser')\n",
-    "                self.add_to_index(page_url, soup)\n",
-    "\n",
+    "                self.add_page_to_index(page_url, soup)\n",
+    "                links = []\n",
     "                for link in soup.find_all('a'):\n",
     "                    link_url = urljoin(page_url, link.get('href'))\n",
     "                    if link_url.find(\"'\")!=-1: continue\n",
@@ -530,21 +556,26 @@
     "                        link_url = link_url[:-1] # 最後が'/'で終わる場合取り除く\n",
     "                    link_url = link_url.split('#')[0] # アンカーを取り除く\n",
     "                    link_url = link_url.split('?')[0] # パラメータを取り除く\n",
-    "                    if url[0:4] == 'http':\n",
-    "                        pages.add(link_url)\n",
+    "                    if link_url[0:4] == 'http':\n",
+    "                        links.append(link_url)\n",
     "                    link_text = self.get_text_only(link)\n",
     "                    self.add_link_ref(page_url, link_url, link_text)\n",
+    "                \n",
+    "                self.union(next_depth, links)\n",
     "\n",
     "                crawled.append(page_url)\n",
+    "                print pages\n",
+    "                print next_depth\n",
     "\n",
     "            if not pages:\n",
     "                pages, next_depth = next_depth, []\n",
-    "                depth += 1"
+    "                depth += 1\n",
+    "                print depth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -566,22 +597,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'test'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = 'test/'\n",
     "if s[-1] == '/':\n",
@@ -592,25 +612,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), u'Crawler'), u'word_list')"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "crawler.db['word_list']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def union(p,q):\n",
+    "    for e in q:\n",
+    "        if e not in p:\n",
+    "            p.append(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pages = ['http://52.25.113.156']\n",
+    "type(pages)\n",
+    "union(pages, [u'http://52.25.113.156/users/sign_up', u'http://52.25.113.156/users/sign_in', u'http://52.25.113.156/tops/about', u'http://52.25.113.156', u'http://52.25.113.156/posts/4', u'http://52.25.113.156/posts/5', u'http://52.25.113.156/users/auth/twitter', u'http://52.25.113.156/posts/3', u'http://52.25.113.156/posts/1'])\n",
+    "pages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
